# cps_racecar

./: .dockerignore  .gitignore  .rsyncignore  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/: plots.xml  vesc.xml  vesc_config_car3.xml  vesc_foc.xml  vesc_plotting.xml
config/vesc/: app_config.xml  motor_config.xml
data/: convert_to_csv.py  data.csv  plots.py  test_run_1.csv
docker/: build_vesc_tool.sh  start.sh  start_vesc_tool.sh  system-compose.yaml
docker/dockerfiles/: legacy_system.Dockerfile  racecar.Dockerfile  racecar_system.Dockerfile  system.Dockerfile  vesc_tool.Dockerfile
docker/racecar/: racecar.Dockerfile  racecar.dev.Dockerfile
docker/scripts/: stop.sh
scripts/: build_vesc_tool.sh  run_remote_dev_container.sh  start_vesc_tool.sh  sync.sh
src/: racecar.repos
src/racecar/: CMakeLists.txt  package.xml
src/racecar_bringup/: CMakeLists.txt  Dockerfile  README.md  package.xml
src/racecar_controllers/: CMakeLists.txt  package.xml  racecar_controllers_plugin.xml
src/racecar_hardware/: CMakeLists.txt  package.xml  racecar_hardware.xml
src/racecar_hardware/include/racecar_hardware/: racecar_vesc_system_interface.hpp  reference.hpp  vesc_effort_interface.hpp  vesc_hardware_interface.hpp  vesc_velocity_interface.hpp
src/racecar_hardware/include/vesc_driver/: vesc_interface.h  vesc_motor_config.h  vesc_packet.h
src/racecar_hardware/src/: racecar_vesc_system_interface.cpp  vesc_hardware_interface.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp  vesc_velocity_interface.cpp
(+65 files in other folders)
